# app/schemas/attention.py
@@ -18,6 +18,10 @@ class AttentionReason(str, enum.Enum):
 
     TRANSCRIPT_FAILED = "TRANSCRIPT_FAILED"
     TRANSCRIPT_STALLED = "TRANSCRIPT_STALLED"
+    SOAP_GENERATION_FAILED = "SOAP_GENERATION_FAILED"
+    SOAP_GENERATION_STALLED = "SOAP_GENERATION_STALLED"
+    CODES_GENERATION_FAILED = "CODES_GENERATION_FAILED"
+    CODES_GENERATION_STALLED = "CODES_GENERATION_STALLED"
     NOTE_NOT_GENERATED = "NOTE_NOT_GENERATED"
     NOT_SIGNED = "NOT_SIGNED"
     SYNC_FAILED = "SYNC_FAILED"
@@ -31,6 +35,8 @@ class AttentionAction(str, enum.Enum):
     """
 
     RESUME_TRANSCRIPTION = "RESUME_TRANSCRIPTION"
+    RETRY_SOAP_GENERATION = "RETRY_SOAP_GENERATION"
+    RETRY_CODES_GENERATION = "RETRY_CODES_GENERATION"
     GENERATE_NOTE = "GENERATE_NOTE"
     SIGN_NOTE = "SIGN_NOTE"
     RETRY_SYNC = "RETRY_SYNC"
